--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 10px;
   font-family: sans-serif;
+}
+
+.photo-card {
+  padding: 5px;
+  object-fit: cover;
+  width: 150px;
+  height: 150px;
 }
